src/main/resources/tomcat-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  labels:
    app: mytomcat #label 为元数据，用于给其他组件匹配
spec:
  containers:
    - name: tomcat
      image: tomcat:8
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080
