src/main/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /tomcat(.*)
            pathType: Exact
            backend:
              service:
                name: tomcat-service
                port:
                  number: 30000
